RESOLVED FIXED153605
[B3][Win64] Compile fixes.
https://bugs.webkit.org/show_bug.cgi?id=153605
Summary [B3][Win64] Compile fixes.
peavo
Reported 2016-01-28 11:20:47 PST
This patch fixes the rest of the compile errors on Win64 when compiling with the following defines: #define HAVE_LLVM 1 #define ENABLE_FTL_JIT 1 #define ENABLE_B3_JIT 1 #define FTL_USES_B3 1
Attachments
Patch (3.53 KB, patch)
2016-01-28 11:27 PST, peavo
no flags
Patch (3.71 KB, patch)
2016-01-29 06:21 PST, peavo
no flags
Archive of layout-test-results from ews100 for mac-yosemite (847.10 KB, application/zip)
2016-01-29 07:05 PST, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-yosemite-wk2 (1.02 MB, application/zip)
2016-01-29 07:08 PST, Build Bot
no flags
Archive of layout-test-results from ews116 for mac-yosemite (1.05 MB, application/zip)
2016-01-29 07:10 PST, Build Bot
no flags
Patch (2.79 KB, patch)
2016-01-29 07:22 PST, peavo
fpizlo: review+
peavo
Comment 1 2016-01-28 11:27:46 PST
Alex Christensen
Comment 2 2016-01-28 11:30:16 PST
What happened to not using LLVM on Windows?
peavo
Comment 3 2016-01-28 11:35:59 PST
(In reply to comment #2) > What happened to not using LLVM on Windows? LLVM is not used, but it seems HAVE_LLVM currently needs to defined to avoid compile errors.
peavo
Comment 4 2016-01-29 06:21:35 PST
Build Bot
Comment 5 2016-01-29 07:05:04 PST
Comment on attachment 270205 [details] Patch Attachment 270205 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/755467 Number of test failures exceeded the failure limit.
Build Bot
Comment 6 2016-01-29 07:05:07 PST
Created attachment 270207 [details] Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-01-29 07:08:46 PST
Comment on attachment 270205 [details] Patch Attachment 270205 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/755477 Number of test failures exceeded the failure limit.
Build Bot
Comment 8 2016-01-29 07:08:50 PST
Created attachment 270208 [details] Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 9 2016-01-29 07:10:42 PST
Comment on attachment 270205 [details] Patch Attachment 270205 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/755461 Number of test failures exceeded the failure limit.
Build Bot
Comment 10 2016-01-29 07:10:46 PST
Created attachment 270209 [details] Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
peavo
Comment 11 2016-01-29 07:22:14 PST
peavo
Comment 12 2016-02-02 08:42:18 PST
(In reply to comment #11) > Created attachment 270211 [details] > Patch I removed the LLVM specific stuff in this patch :)
peavo
Comment 13 2016-02-02 10:31:20 PST
Thanks for reviewing :)
peavo
Comment 14 2016-02-02 11:10:35 PST
Note You need to log in before you can comment on or make changes to this bug.