[B3][Win64] Compile fixes. https://bugs.webkit.org/show_bug.cgi?id=153605

Reviewed by Filip Pizlo.

Fix remaining compile errors on Win64.

* CMakeLists.txt:
* b3/B3CFG.h:
(JSC::B3::CFG::newMap):
* ftl/FTLJITCode.h:


Canonical link: https://commits.webkit.org/171878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196019 268f45cc-cd09-0410-ab3c-d52691b4dbfc