Source/JavaScriptCore/ftl/FTLJITCode.h
@@ -39,6 +39,7 @@
 #include "LLVMAPI.h"
 #include <wtf/RefCountedArray.h>
 
+#if !FTL_USES_B3
 #if OS(DARWIN)
 #define SECTION_NAME_PREFIX "__"
 #elif OS(LINUX)
@@ -48,6 +49,7 @@
 #endif
 
 #define SECTION_NAME(NAME) (SECTION_NAME_PREFIX NAME)
+#endif // !FTL_USES_B3
 
 namespace JSC {
 
